2010-06-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #30085: memcpy_P on XMega does not clr NVM.CMD before copy
	* include/avr/pgmspace.h: Mention that for Xmega devices,
	these functions require NVM.CMD being set to 0x00.

2010-06-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/interrupt.h (cli, sei): Add a memory barrier,
	and cross-reference <util/atomic.h>.

2010-06-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Implement new header file: <avr/cpufunc.h>
	* include/avr/cpufunc.h: New file.
	* include/avr/Makefile.am (avr_HEADERS): Add cpufunc.h.
	* doc/api/doxygen.config.in (INPUT): Add avr/cpufunc.h.

2010-06-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Bob Paddock:
	patch #6891: Add XMega software reset to the FAQ section on software
	reset
	* doc/api/faq.dox (faq_softreset): Mention the Xmega RST.CTRL method.

2010-06-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Ruwan Jayanetti:
	patch #6194: Twitest updated to handle larger EEPROM devices
	* doc/examples/twitest/twitest.c: Implement the
	WORD_ADDRESS_16BIT option.
	* doc/examples/twitest/twitest.dox: Document the new option.

2010-06-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Gerben van den Broeke:
	patch #6555: malloc improvement
	* libc/stdlib/malloc.c (malloc): Speed up reallocations.

2010-06-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Krzysztof Kosciuszkiewicz:
	patch #6690: Shorten calculation of dallas 1-wire crc
	* include/util/crc16.h (_crc_ibutton_update): no need to
	use the T flag bit to save bit 0 of the operand

2010-06-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Tero Sinervo:
	patch #6791: Minor fixes to stdio.h documentation
	* include/stdio.h: Fix spelling mistakes.

2010-06-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Heike C. Zimmerer:
	patch #6897: Allow <util/setbaud.h> to be used with assembler source
	* include/util/setbaud.h: Add assembler snippets (no UL suffix
	added to numbers)
